# hermestrader

./: .coverage  .dockerignore  .env.example  .env.live.example  .env.paper.example  .gitignore  .jules.yml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  REBUILD.md  SETUP_GUIDE.md  aapl_cs75_sim.py  alembic.ini  app.py  check_bot_status.py  check_db.py  check_db_config.py  check_ml_scratch.py  code_review_reply.md  debug_backtest_run.py  debug_limits.py  debug_trades_check.py  debug_users.py  docker-compose.prod.yml  docker-compose.yml  exceptions.py  fix_obp.py  fix_service.py  fix_wheel_trades.py  get_bot_logs.py  get_bot_status.py  get_cb_logs.py  get_qr_auth.py  get_wheel_logs.py  get_wheel_logs_2.py  (+71 more)
.cursor/: mcp.json
.hermes/: SOUL.md
alembic/: env.py
bot/: money_manager.py  portfolio_manager.py  trade_manager.py  utils.py
docs/: architecture-backlog.md  ds02_spec.md  ds0_spec.md  ml_efficacy_findings.md  tradier_llms.txt
hermes/: __init__.py  clock.py  common.py  config.py  config_schema.py  event_calendar.py  greeks.py  interfaces.py  ipc.py  market_hours.py  schemas.py  utils.py
logic/: calculator.py  edgar_client.py  parser.py
logs/: TrendStrategy_2025-12-17_09-52_VNALS5_settings.json  TrendStrategy_2025-12-17_09-52_VNALS5_stats.csv  TrendStrategy_2025-12-17_09-52_VNALS5_tearsheet.csv  TrendStrategy_2025-12-17_09-52_VNALS5_tearsheet.html  TrendStrategy_2025-12-17_09-52_VNALS5_trades.csv
models/: AAPL_features.json  AAPL_lstm_scaler.pkl  AAPL_lstm_target_scaler.pkl  AMD_features.json  AMD_lstm.keras  (+49 more)
(+560 files in other folders)
