[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermestrader"
version = "0.12.0"
description = "Two-service Python trading system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Jules Team" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.47.0",
    "watchfiles==1.2.0",
    "sqlalchemy==2.0.49",
    "psycopg[binary]==3.3.4",
    "pgvector==0.4.2",
    "duckdb==1.5.3",
    "alembic==1.13.3",
    "cryptography==48.0.0",
    "pandas==3.0.3",
    "numpy==2.4.6",
    "requests==2.34.2",
    "tenacity==9.1.4",
    "ollama==0.6.2",
    "tzdata==2026.2",
    "mcp[cli]==1.27.1",
    "pydantic-settings==2.14.1",
    "GitPython==3.1.50",
    "httpx==0.28.1",
    "sse-starlette==3.4.4",
    "transitions==0.9.3",
    "greenlet==3.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.14",
]
ml = [
    "xgboost==3.2.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "joblib==1.5.3",
    "matplotlib==3.10.9",
]

[dependency-groups]
dev = [
    "hermestrader[dev]",
]
ml = [
    "hermestrader[ml]",
]

[tool.hatch.build.targets.wheel]
packages = ["hermes"]

